# Valorant-Berlin

./: README.md  pyproject.toml
datascrape/: game.py  scrape_all.py  scrape_game.py
datascrape/datasets/: EMEA_dataset.txt  KOREA_dataset.txt  LATAM_dataset.txt  NA_dataset.txt  SEA_dataset.txt
metadata/: berlin_games.py  berlin_players.json  vlr_teams.json
notebooks/: Data Scrape All Games.ipynb  Data Scrape Single Game.ipynb  Valorant Berlin.ipynb
